start refactor from class state mgmt to hook mgmt

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ textarea {
   background-color: #818180d3;
   color: #000;
   border: 1px solid #ccc;
+  margin: auto;
+  padding: 3px;
+
 }
 
 /* Style for placeholder text */
@@ -33,6 +36,9 @@ button {
   background-color: #9b3225ab;
   color: #000000;
   border: 1px solid rgb(80, 25, 25);
+  margin: auto;
+  margin-top: 5px;
+  padding: 3px;
 }
 
 /* Style for horizontal rule */
